<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarKelasTrainer">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/daftar_cls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/daftar_cls"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/judul_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/daftar_cls"
            android:text="@string/title_ex"
            android:fontFamily="@font/montserratsemibold"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/jadwal_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/judul_id"
            android:text="@string/jadwal_cls"
            android:fontFamily="@font/montserratregular"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/baseline_date_range_24" />

        <TextView
            android:id="@+id/jam_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/jadwal_id"
            android:text="@string/jam_cls"
            android:fontFamily="@font/montserratregular"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/baseline_timer_24"/>

        <TextView
            android:id="@+id/lokasi_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/jam_id"
            android:text="@string/lokasi_cls"
            android:fontFamily="@font/montserratregular"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/baseline_location_on_25" />

        <TextView
            android:id="@+id/periode_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/lokasi_id"
            android:text="@string/periode_cls"
            android:fontFamily="@font/montserratsemibold"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/starttime_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/periode_id"
            android:text="@string/periode_ex"
            android:fontFamily="@font/montserratregular"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/level_cls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/starttime_id"
            android:text="@string/level"
            android:fontFamily="@font/montserratsemibold"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/level_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/level_cls"
            android:text="@string/level_ex"
            android:fontFamily="@font/montserratregular"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/vector_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/level_id"
            android:src="@drawable/vector12"/>

        <TextView
            android:id="@+id/total_cls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/vector_id"
            android:text="@string/total_cls"
            android:fontFamily="@font/montserratsemibold"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/harga_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/vector_id"
            android:text="@string/harga_ex"
            android:fontFamily="@font/montserratsemibold"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/rekening_cls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/total_cls"
            android:text="@string/rekening_pt"
            android:fontFamily="@font/montserratsemibold"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/rekening_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/rekening_cls"
            android:text="@string/rekening_ex"
            android:fontFamily="@font/montserratregular"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/rekening_cls"
            android:text="@string/rekening_ex"
            android:fontFamily="@font/montserratregular"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buktibayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:layout_below="@+id/user_id"
            android:text="@string/bayar_cls"
            android:fontFamily="@font/montserratmedium"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:backgroundTint="@color/kelas"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>