<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FormKelasActivity">

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/konfirm_cls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/konfirm_cls"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/konfirm_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/konfirm_cls"
                android:text="@string/konfirm_desc"
                android:fontFamily="@font/montserratlight"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bank_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/konfirm_desc"
                android:text="@string/bank"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nama_bank_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="@color/kelas"
                android:hint="@string/bank_ex"
                android:layout_below="@+id/bank_id"
                android:fontFamily="@font/montserratmedium"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/norek_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/nama_bank_id"
                android:text="@string/rekening_cls"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/rekening_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="@color/kelas"
                android:hint="@string/rek_ex"
                android:layout_below="@+id/norek_id"
                android:fontFamily="@font/montserratmedium"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/nama_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/rekening_id"
                android:text="@string/name"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="@color/kelas"
                android:hint="@string/name_ex"
                android:layout_below="@+id/nama_id"
                android:fontFamily="@font/montserratmedium"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/total_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/name_id"
                android:text="@string/nominal_cls"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nominal_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="@color/kelas"
                android:hint="@string/harga_ex"
                android:layout_below="@+id/total_id"
                android:fontFamily="@font/montserratmedium"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/daftarkelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="50dp"
                android:layout_below="@+id/nominal_id"
                android:text="@string/konfirm_btn"
                android:fontFamily="@font/montserratmedium"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="daftarkelas"
                android:backgroundTint="@color/kelas"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>